Fixed home form spacing

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -383,7 +383,7 @@ h2 {
 
 .contact-form-home {
   max-width: 400px;
-  width: 90%;
+  width: 100%;
   padding: 10px 0;
 
   label {
